--- a/iosApp/Health/Classes/Controller/SettingsViewController.xib
+++ b/iosApp/Health/Classes/Controller/SettingsViewController.xib
@@ -76,6 +76,7 @@
                     <constraints>
                         <constraint firstItem="P7h-26-7bx" firstAttribute="leading" secondItem="XQM-EJ-Wdy" secondAttribute="leading" id="8BQ-dt-C4n"/>
                         <constraint firstAttribute="bottom" secondItem="P7h-26-7bx" secondAttribute="bottom" id="Ccl-Jd-LZ5"/>
+                        <constraint firstItem="P7h-26-7bx" firstAttribute="top" secondItem="XQM-EJ-Wdy" secondAttribute="top" id="Jbz-e8-wkT"/>
                         <constraint firstAttribute="height" relation="lessThanOrEqual" constant="45" id="Snq-dc-QAS"/>
                         <constraint firstAttribute="trailing" secondItem="P7h-26-7bx" secondAttribute="trailing" id="omG-2p-UgK"/>
                     </constraints>
@@ -234,7 +235,7 @@
                         <constraint firstAttribute="bottom" secondItem="yRv-SV-D9u" secondAttribute="bottom" id="xue-Y5-0jn"/>
                     </constraints>
                 </view>
-                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Collect Data from Fitness Tracker" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4Rn-hJ-fWV">
+                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Connect Your Fitness Tracker" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4Rn-hJ-fWV">
                     <rect key="frame" x="13" y="54" width="222" height="38"/>
                     <fontDescription key="fontDescription" name="Avenir-Light" family="Avenir" pointSize="13"/>
                     <color key="textColor" red="0.47058823529999999" green="0.47058823529999999" blue="0.47058823529999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
