--- a/iosApp/Health/Classes/Controller/AssessmentViewController.xib
+++ b/iosApp/Health/Classes/Controller/AssessmentViewController.xib
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="AssessmentViewController">
@@ -23,9 +27,9 @@
             <subviews>
                 <navigationBar contentMode="scaleToFill" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1Fw-qB-j4c">
                     <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
-                    <color key="barTintColor" red="0.30980392159999998" green="0.75686274509999996" blue="0.91372549020000005" alpha="1" colorSpace="calibratedRGB"/>
+                    <color key="barTintColor" red="0.30980392159999998" green="0.75686274509999996" blue="0.91372549020000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <textAttributes key="titleTextAttributes">
-                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </textAttributes>
                     <items>
                         <navigationItem id="gbZ-av-7OO">
@@ -36,77 +40,72 @@
                                 <subviews>
                                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Assessment:" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7DO-P6-n5f" userLabel="Label - Assessment">
                                         <rect key="frame" x="52" y="10" width="120" height="21"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <fontDescription key="fontDescription" name="Avenir-Light" family="Avenir" pointSize="15"/>
-                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zaH-L5-THP" userLabel="completion - 90%">
                                         <rect key="frame" x="165" y="8" width="37" height="26"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <fontDescription key="fontDescription" name="Avenir-Roman" family="Avenir" pointSize="13"/>
                                         <state key="normal" title="0%">
-                                            <color key="titleColor" red="0.47058823529999999" green="0.47058823529999999" blue="0.47058823529999999" alpha="1" colorSpace="calibratedRGB"/>
-                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                            <color key="titleColor" red="0.47058823529999999" green="0.47058823529999999" blue="0.47058823529999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         </state>
                                     </button>
                                 </subviews>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                             </view>
                         </navigationItem>
                     </items>
                 </navigationBar>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" bounces="NO" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="z2I-gC-Hwp">
                     <rect key="frame" x="0.0" y="44" width="320" height="240"/>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="240" id="ZXg-rX-rXK"/>
                     </constraints>
-                    <color key="separatorColor" red="0.88235294119999996" green="0.88235294119999996" blue="0.88235294119999996" alpha="1" colorSpace="calibratedRGB"/>
+                    <color key="separatorColor" red="0.88235294119999996" green="0.88235294119999996" blue="0.88235294119999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <connections>
                         <outlet property="dataSource" destination="-1" id="FpV-Ui-cs1"/>
                         <outlet property="delegate" destination="-1" id="Se6-m2-DIG"/>
                     </connections>
                 </tableView>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="instructionImage.png" translatesAutoresizingMaskIntoConstraints="NO" id="3SZ-Vi-K7q">
-                    <rect key="frame" x="23" y="281" width="276" height="173"/>
-                    <constraints>
-                        <constraint firstAttribute="width" constant="276" id="PBS-K4-Znc"/>
-                        <constraint firstAttribute="height" constant="173" id="dfV-nh-69N"/>
-                    </constraints>
-                </imageView>
                 <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VMp-cI-37A" customClass="FUIButton">
-                    <rect key="frame" x="253" y="470" width="59" height="25"/>
+                    <rect key="frame" x="102" y="339" width="116" height="25"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="25" id="dNG-fi-tlc"/>
-                        <constraint firstAttribute="width" constant="60" id="fSN-Zl-uNL"/>
+                        <constraint firstAttribute="height" constant="50" id="dNG-fi-tlc"/>
+                        <constraint firstAttribute="width" constant="200" id="fSN-Zl-uNL"/>
                     </constraints>
-                    <fontDescription key="fontDescription" name="Avenir-Roman" family="Avenir" pointSize="12"/>
+                    <fontDescription key="fontDescription" name="Avenir-Roman" family="Avenir" pointSize="16"/>
                     <state key="normal" title="SUBMIT">
-                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </state>
                     <connections>
                         <action selector="clickedSubmitBtn:" destination="-1" eventType="touchUpInside" id="Kxe-R4-aXb"/>
                     </connections>
                 </button>
             </subviews>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstAttribute="centerX" secondItem="3SZ-Vi-K7q" secondAttribute="centerX" id="2Yi-u4-UVG"/>
                 <constraint firstItem="1Fw-qB-j4c" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="APB-g6-NRA"/>
-                <constraint firstAttribute="bottom" secondItem="VMp-cI-37A" secondAttribute="bottom" constant="10" id="GXi-hx-qHm"/>
                 <constraint firstItem="z2I-gC-Hwp" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="GYw-2E-1dt"/>
-                <constraint firstAttribute="trailing" secondItem="VMp-cI-37A" secondAttribute="trailing" constant="10" id="MDc-vv-e7x"/>
+                <constraint firstItem="VMp-cI-37A" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="339" id="Gab-cX-P74"/>
                 <constraint firstAttribute="trailing" secondItem="1Fw-qB-j4c" secondAttribute="trailing" id="NTB-eI-5af"/>
                 <constraint firstItem="z2I-gC-Hwp" firstAttribute="top" secondItem="1Fw-qB-j4c" secondAttribute="bottom" id="OeM-2F-YTe"/>
                 <constraint firstAttribute="trailing" secondItem="z2I-gC-Hwp" secondAttribute="trailing" id="Wf7-Rf-kuV"/>
-                <constraint firstItem="3SZ-Vi-K7q" firstAttribute="top" secondItem="z2I-gC-Hwp" secondAttribute="bottom" id="YZA-kF-qo1"/>
                 <constraint firstItem="z2I-gC-Hwp" firstAttribute="top" secondItem="1Fw-qB-j4c" secondAttribute="bottom" id="bT2-ft-PxY"/>
                 <constraint firstItem="1Fw-qB-j4c" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="jyX-lN-4td"/>
+                <constraint firstItem="VMp-cI-37A" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="ww7-TB-0vd"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <point key="canvasLocation" x="173" y="150"/>
         </view>
     </objects>
-    <resources>
-        <image name="instructionImage.png" width="528" height="320"/>
-    </resources>
+    <simulatedMetricsContainer key="defaultSimulatedMetrics">
+        <simulatedStatusBarMetrics key="statusBar"/>
+        <simulatedOrientationMetrics key="orientation"/>
+        <simulatedScreenMetrics key="destination" type="retina4_7.fullscreen"/>
+    </simulatedMetricsContainer>
 </document>
